fixed issue where google map was not responsive. added some images and copy text. removed some social buttons

--- a/src/assets/scss/components/_map.scss
+++ b/src/assets/scss/components/_map.scss
@@ -8,19 +8,14 @@
 
   height:0;
 
-
+  margin: auto;
   
-  iframe {
 
-    left:0;
-
-    top:0;
-
-    height:100%;
-
-    width:100%;
-
-    position:absolute;
-
+  > iframe {
+    width: -webkit-fill-available;
+    width: stretch;
+  }
 }
-}
+
+
+
